# Bacondish2023_setup-googletest

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md  action.yml
.github/workflows/: smoke_test.yml
example_project/: CMakeLists.txt
example_project/include/: AbstractWriter.hpp  Time.hpp  arithmetic.hpp
example_project/src/: AbstractWriter.cpp  Time.cpp  arithmetic.cpp
example_project/test/: test_AbstractWriter.cpp  test_Time.cpp  test_arithmetic.cpp
google_test_installer/: .gitignore
google_test_installer/google_test_installer/: __main__.py  google_test_installer.py
google_test_installer/test/: test_google_test_installer.py
